@@ -35,6 +35,9 @@
 
 	* pygtk-gtkvseparator.xml Fix link to constructor.
 
+	* pygtk-gtkwindow.xml (gtk.window_set_auto_startup_notification)
+	Add description for this PyGTK 2.2 function.
+
 2004-04-22  John Finlay  <finlay@moeraki.com>
 
 	* pygtk-gdkpixbuf.xml
